fix overflow from container

--- a/docs/style.css
+++ b/docs/style.css
@@ -34,6 +34,9 @@ ul {
 
 .container {
     width: 100%;
+    margin: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
 } 
 
 #container-blue {
